--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Michael</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script defer src="js/script.js"></script>
 </head>
 <body>
@@ -23,10 +24,11 @@
 
 <section class="section">
     <h3>Reach me at:</h3>
-    <ul>
-      <li>agyebengmichael@gmail.com</li>
-      <li>+233-545-500-456</li>
-    </ul>
+    <div class="contact-info">
+        <p><i class="fas fa-phone"></i> +233-545-500-456</p>
+        <p><i class="fas fa-envelope"></i> agyebengmichael@gmail.com</p>
+    </div>
+    
 
     <h2>Send Me A Message</h2>
     <form id="contactForm">
