--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
             <h3>Pizza Sales Dashboard</h3>
         </a>
 
-        <a href="https://github.com/MichaelAgyebeng/Supermarket_analysis" class="project-card" target="_blank"  rel="noopener noreferrer">
+        <a href="https://github.com/MichaelAgyebeng/Sport-Products-Sales-Analysis" class="project-card" target="_blank"  rel="noopener noreferrer">
             <div class="project-img">
-                <img src="images/SUPERMARKET DASHBOARD.png" alt="Supermarket Analytics Dashboard">
+                <img src="images/sports gear.png" alt="Sport Products Sales Analysis Dashboard">
             </div>
-                <h3>Supermarket Analysis</h3>
+                <h3>Sport Products Sales Analysis</h3>
         </a>
 
     </div>
