--- a/more-projects.html
+++ b/more-projects.html
@@ -59,6 +59,13 @@
             </div>
             <h3>Superstore Sales Analytics</h3>
         </a>
+        
+        <a href="https://github.com/MichaelAgyebeng/Sport-Products-Sales-Analysis" class="project-card" target="_blank"  rel="noopener noreferrer">
+            <div class="project-img">
+                <img src="images/sports gear.png" alt="Sport Products Sales Analysis Dashboard">
+            </div>
+                <h3>Sport Products Sales Analysis</h3>
+        </a>
 
         <a href="https://github.com/MichaelAgyebeng/Electronics-Analytics" class="project-card" target="_blank"  rel="noopener noreferrer">
             <div class="project-img">
