--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
         <li>Cognos Analytics</li>
         <li>Looker Studio</li>
         <li>LaTeX</li>
-        <li>Prompt Engineering</li>
         <li>Tableau</li>
+        <li>Prompt Engineering</li>
+        <li>Data Scrapping</li>
         <li>Machine Learning</li>
         <li>Data Visualization</li>
         <li>Predictive Modelling</li>
