--- a/more-projects.html
+++ b/more-projects.html
@@ -23,7 +23,7 @@
 </header>
 
 <section class="section">
-    <h2>More Projects</h2>
+    <h2>More Data Analytics Projects</h2>
     <div class="projects">
         <a href="https://github.com/MichaelAgyebeng/Healthcare-Analytics" class="project-card" target="_blank"  rel="noopener noreferrer">
             <div class="project-img">
@@ -119,6 +119,33 @@
     </div>
 </section>
 
+<section class="section">
+    <h2>Data Science Projects</h2>
+    <div class="projects">
+        <a href="https://github.com/MichaelAgyebeng/Subscription-predictor" class="project-card" target="_blank"  rel="noopener noreferrer">
+            <div class="project-img">
+                <img src="images\Subscriptions_Predictor.png" alt="Subscriptions Predictor">
+            </div>
+            <h3>ML-Subscriptions Predictor</h3>
+        </a>
+
+        <a href="https://github.com/MichaelAgyebeng/Personality-prediction-ml" class="project-card" target="_blank"  rel="noopener noreferrer">
+            <div class="project-img">
+                <img src="images\personality.jpg" alt="Personality Prediction">
+            </div>
+            <h3>ML-Personality Prediction</h3>
+        </a>
+
+        <a href="https://github.com/MichaelAgyebeng/webscraping-skincare-product-details" class="project-card" target="_blank"  rel="noopener noreferrer">
+            <div class="project-img">
+                <img src="images\skincareprod.jpg" alt="Skincare Products Scrapping">
+            </div>
+            <h3>Web Scrapping- Skincare Products</h3>
+        </a>
+    </div>
+</section>
+
+    
 <footer>
     <div class="social-links">
         <a href="https://www.linkedin.com/in/michael-owusu-agyebeng-b2a804153/" target="_blank" rel="noopener noreferrer">
